# routers/user.js
@@ -13,7 +13,7 @@ const requesttopicModel = require("../schemas/model_request_topic");
 
 router.put("/edit_profile",async (request, response) => {
     // #swagger.tags = ['User']
-    // #swagger.description = 'ค้นหาโพสต์ด้วยข้อความ'
+    // #swagger.description = 'แก้ไข Profile'
     try {
       const user = await userModel.findOne({_id:request.user.id})
       
@@ -26,7 +26,7 @@ router.put("/edit_profile",async (request, response) => {
 
 router.get("/:user_id/profile", async (request, response) => {
     // #swagger.tags = ['User']
-    // #swagger.description = 'ค้นหาโพสต์ด้วยข้อความ'
+    // #swagger.description = 'ขอข้อมูล User profile'
     const user = await userModel.findById(request.params.user_id);
     console.log(user);
     const res = {
@@ -48,7 +48,7 @@ router.get("/:user_id/profile", async (request, response) => {
 
 router.get("/following_topic", async (request, response) => {
     // #swagger.tags = ['User']
-    // #swagger.description = 'ค้นหาโพสต์ด้วยข้อความ'
+    // #swagger.description = 'ขอ topic ที่ user follow ไว้'
     const all_topic = await topicModel.find();
     console.log(all_topic);
     //const user_follow_topic = await followtopicModel.findById(request.params.user_id);
@@ -78,7 +78,7 @@ router.get("/following_topic", async (request, response) => {
 
 router.post("/follow_topic/:topic_id", async (request, response) => {
   // #swagger.tags = ['User']
-  // #swagger.description = 'ค้นหาโพสต์ด้วยข้อความ'
+  // #swagger.description = 'ส่ง Topic ที่ user ต้องการ Follow'
   const followtopic = new followtopicModel({
     user_id : request.user.id,
     topic_id : request.params.topic_id,
@@ -94,7 +94,7 @@ router.post("/follow_topic/:topic_id", async (request, response) => {
 
 router.delete("/unfollow_topic/:topic_id", async (request, response) => {
   // #swagger.tags = ['User']
-  // #swagger.description = 'ค้นหาโพสต์ด้วยข้อความ'
+  // #swagger.description = 'Unfollow topic ที่ user follow ไว้'
   try {
     await followtopicModel.findOneAndRemove({user_id : request.user.id, topic_id : request.params.topic_id });
     response.send("unfollowed");
@@ -105,7 +105,7 @@ router.delete("/unfollow_topic/:topic_id", async (request, response) => {
 
 router.get("/user_like_post", async (request, response) => {
   // #swagger.tags = ['User']
-  // #swagger.description = 'ค้นหาโพสต์ด้วยข้อความ'
+  // #swagger.description = 'ขอ post ที่ user like ไว้'
   const like_post = await likepostModel.find({user_id : request.user.id});
   //console.log(like_post);
   
@@ -140,9 +140,9 @@ router.get("/user_like_post", async (request, response) => {
   }
 });
 
-router.get("/user_post", async (request, response) => {
+router.get("/mypost", async (request, response) => {
   // #swagger.tags = ['User']
-  // #swagger.description = 'ค้นหาโพสต์ด้วยข้อความ'
+  // #swagger.description = 'ขอ Post ที่ user เป็นคนเขียน'
   const post = await postModel.find({user_id : request.user.id});
   const user = await userModel.findById(request.user.id);
   const res = {
