# swagger_output.json
@@ -136,7 +136,7 @@
         "tags": [
           "User"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "แก้ไข Profile",
         "parameters": [],
         "responses": {
           "200": {
@@ -153,7 +153,7 @@
         "tags": [
           "User"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอข้อมูล User profile",
         "parameters": [
           {
             "name": "user_id",
@@ -179,7 +179,7 @@
         "tags": [
           "User"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอ topic ที่ user follow ไว้",
         "parameters": [],
         "responses": {
           "200": {
@@ -196,7 +196,7 @@
         "tags": [
           "User"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ส่ง Topic ที่ user ต้องการ Follow",
         "parameters": [
           {
             "name": "topic_id",
@@ -222,7 +222,7 @@
         "tags": [
           "User"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "Unfollow topic ที่ user follow ไว้",
         "parameters": [
           {
             "name": "topic_id",
@@ -248,7 +248,7 @@
         "tags": [
           "User"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอ post ที่ user like ไว้",
         "parameters": [],
         "responses": {
           "200": {
@@ -260,12 +260,12 @@
         }
       }
     },
-    "/api/user/user_post": {
+    "/api/user/mypost": {
       "get": {
         "tags": [
           "User"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอ Post ที่ user เป็นคนเขียน",
         "parameters": [],
         "responses": {
           "200": {
@@ -282,7 +282,7 @@
         "tags": [
           "Search"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ค้นหา Topic ด้วยข้อความ",
         "parameters": [
           {
             "name": "text",
@@ -307,7 +307,7 @@
         "tags": [
           "Post"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ส่ง post ที่ต้องการเพิ่มใน Database",
         "parameters": [],
         "responses": {
           "200": {
@@ -350,7 +350,7 @@
         "tags": [
           "Post"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอข้อมูล post ทั้งหมดจาก Database",
         "parameters": [],
         "responses": {
           "200": {
@@ -367,7 +367,7 @@
         "tags": [
           "Post"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอข้อมูลของ post_id นั้นๆ",
         "parameters": [
           {
             "name": "post_id",
@@ -393,7 +393,7 @@
         "tags": [
           "Post"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ส่ง Report post",
         "parameters": [
           {
             "name": "entity_id",
@@ -433,7 +433,7 @@
         "tags": [
           "Post"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "แก้ไข post",
         "parameters": [
           {
             "name": "post_id",
@@ -459,7 +459,7 @@
         "tags": [
           "Post"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "Like post และส่ง notice ให้เจ้าของ Post",
         "parameters": [
           {
             "name": "post_id",
@@ -485,7 +485,7 @@
         "tags": [
           "Post"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "Unlike post และลบ Notice ออก",
         "parameters": [
           {
             "name": "post_id",
@@ -511,7 +511,7 @@
         "tags": [
           "Comment"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "สร้าง Comment โดยส่ง User_id ของคนคอมเม้น Post_id ของโพสที่จะคอมเม้นและ Comment_content",
         "parameters": [],
         "responses": {
           "200": {
@@ -545,7 +545,7 @@
         "tags": [
           "Comment"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอข้อมูลของ Comment ทั้งหมดของ post_id นั้น",
         "parameters": [
           {
             "name": "post_id",
@@ -571,7 +571,7 @@
         "tags": [
           "Comment"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ส่ง Report comment",
         "parameters": [
           {
             "name": "entity_id",
@@ -611,7 +611,7 @@
         "tags": [
           "Comment"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "แก้ไข Comment",
         "parameters": [
           {
             "name": "comment_id",
@@ -637,7 +637,7 @@
         "tags": [
           "Comment"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "Like comment",
         "parameters": [
           {
             "name": "comment_id",
@@ -663,7 +663,7 @@
         "tags": [
           "Comment"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "Unlike comment",
         "parameters": [
           {
             "name": "comment_id",
@@ -689,7 +689,7 @@
         "tags": [
           "Reply"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ส่งข้อมูลสำหรับสร้าง Reply",
         "parameters": [],
         "responses": {
           "200": {
@@ -723,7 +723,7 @@
         "tags": [
           "Reply"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอ reply ทั้งหมดของ Comment นั้น",
         "parameters": [
           {
             "name": "comment_id",
@@ -749,7 +749,7 @@
         "tags": [
           "Reply"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ส่ง report Reply",
         "parameters": [
           {
             "name": "entity_id",
@@ -789,7 +789,7 @@
         "tags": [
           "Reply"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "แก้ไข Reply",
         "parameters": [
           {
             "name": "reply_id",
@@ -815,7 +815,7 @@
         "tags": [
           "Reply"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "like reply",
         "parameters": [
           {
             "name": "reply_id",
@@ -841,7 +841,7 @@
         "tags": [
           "Reply"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "unlike reply",
         "parameters": [
           {
             "name": "reply_id",
@@ -867,7 +867,7 @@
         "tags": [
           "Topic/Catagory"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอ Topic ของ Catagory นั้น",
         "parameters": [
           {
             "name": "catagory",
@@ -893,7 +893,7 @@
         "tags": [
           "Topic/Catagory"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ขอ Topic และ Catagory ทั้งหมด",
         "parameters": [],
         "responses": {
           "200": {
@@ -910,7 +910,7 @@
         "tags": [
           "Topic/Catagory"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "สร้าง Topic ใหม่",
         "parameters": [],
         "responses": {
           "200": {
@@ -927,7 +927,7 @@
         "tags": [
           "Topic/Catagory"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ส่ง Request topic",
         "parameters": [
           {
             "name": "topic",
@@ -1016,7 +1016,7 @@
         "tags": [
           "Admin"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "รับข้อมูล Request Topic ทั้งหมด",
         "parameters": [],
         "responses": {
           "200": {
@@ -1033,7 +1033,7 @@
         "tags": [
           "Admin"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ลบ Request topic ออกจาก Database",
         "parameters": [
           {
             "name": "request_id",
@@ -1059,7 +1059,7 @@
         "tags": [
           "Admin"
         ],
-        "description": "ค้นหาโพสต์ด้วยข้อความ",
+        "description": "ตอบรับ Request topic โดยส่ง topic_name และ catagory_id ที่ต้องการเพิ่มใน Database จากนั้นทำการลบ Request ออกจาก Database",
         "parameters": [
           {
             "name": "request_id",
